--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+   android:id="@+id/login_fragment"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.LoginActivity">
+    tools:context=".fragment.LoginFragment">
 
     <TextView
         android:id="@+id/txtLogin"
@@ -95,3 +96,4 @@
         app:layout_constraintTop_toBottomOf="@id/btnGoogleAuth" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
