--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -8,9 +8,12 @@
         android:id="@+id/imgApi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="5dp"
+        android:layout_marginHorizontal="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/baseline_person_24"
+        app:layout_constraintCircleRadius="20dp"
         android:contentDescription="@string/todo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
